Problem: OutOfMemory wynikał z nadmiernej retencji obiektów (duże HashMap) oraz mutowania encji JPA podczas przetwarzania, co powodowało utrzymywanie dużych grafów w pamięci.
Zmiany: grupowanie po ID zamiast encji, uproszczony equals/hashCode w SightEvent, wprowadzenie TicketDefWithAtna zamiast modyfikacji TicketDefinition oraz wyłączenie PoolEntryDateRepairer.